--- a/src/input.css
+++ b/src/input.css
@@ -186,7 +186,7 @@ tr:hover .img-1 {
 /* Phúc end */
 .max-w-\[700px\] {
     max-width: 700px;
-} */
+}
 
 .ap__container h1, .AI__container__info h1, .cost__container h1, .card-content h1{
     font-size: 4.5rem;
