--- a/src/output.css
+++ b/src/output.css
@@ -1087,6 +1087,10 @@ input:checked + .toggle-bg {
   bottom: 0px;
 }
 
+.bottom-3\/4 {
+  bottom: 75%;
+}
+
 .bottom-\[60px\] {
   bottom: 60px;
 }
@@ -1095,8 +1099,8 @@ input:checked + .toggle-bg {
   left: 0px;
 }
 
-.left-80 {
-  left: 20rem;
+.left-1\/3 {
+  left: 33.333333%;
 }
 
 .right-0 {
@@ -1105,10 +1109,6 @@ input:checked + .toggle-bg {
 
 .top-0 {
   top: 0px;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
 }
 
 .z-10 {
@@ -1156,6 +1156,11 @@ input:checked + .toggle-bg {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .-mb-px {
@@ -1232,6 +1237,10 @@ input:checked + .toggle-bg {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -1734,6 +1743,10 @@ input:checked + .toggle-bg {
   padding: 1.25rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -1794,6 +1807,11 @@ input:checked + .toggle-bg {
   padding-bottom: 2.25rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1842,6 +1860,14 @@ input:checked + .toggle-bg {
   padding-top: 2.25rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1853,6 +1879,11 @@ input:checked + .toggle-bg {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-6xl {
@@ -1888,6 +1919,16 @@ input:checked + .toggle-bg {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -2216,7 +2257,7 @@ tr:hover .img-1 {
   max-width: 700px;
 }
 
-.ap__container h1, .AI__container__info h1, .cost__container h1, .card-content h1{
+.ap__container h1, .cost__container h1, .card-content h1{
   font-size: 4.5rem;
   font-weight: bold;
 }
@@ -2619,6 +2660,19 @@ tr:hover .img-1 {
 }
 
 @media (min-width: 768px) {
+  .md\:left-80 {
+    left: 20rem;
+  }
+
+  .md\:top-1\/3 {
+    top: 33.333333%;
+  }
+
+  .md\:mx-16 {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
   .md\:ml-24 {
     margin-left: 6rem;
   }
@@ -2627,12 +2681,21 @@ tr:hover .img-1 {
     margin-right: 6rem;
   }
 
+  .md\:mt-24 {
+    margin-top: 6rem;
+  }
+
   .md\:flex {
     display: flex;
   }
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
 
