--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
 }
+/* @media (min-width: 768px) {
+    body {
+      font-size: 18px;
+    }
+  } */
 
 body {
     font-size: 1.125rem;
