--- a/src/Toan/style.css
+++ b/src/Toan/style.css
@@ -33,7 +33,7 @@
 }
 
 .class-external-toan {
-  border: 10px solid 
+  border: 10px solid;
 }
 
 /* >849px */
@@ -69,7 +69,6 @@
 @media screen and (max-width: 849px) {
   .class-external-toan .tieu-de-chinh {
     font-size: 30px;
-    
   }
 
   .signup-resp .tieu-de-phu {
@@ -99,7 +98,7 @@
 @media screen and (max-width: 549px) {
   .class-external-toan .tieu-de-chinh {
     font-size: 20px;
-   
+    color: yellow;
   }
 
   .signup-resp .tieu-de-phu {
@@ -112,9 +111,6 @@
     grid-template-columns: 1fr;
   }
   .bo-cuc-4 {
-    grid-template-columns: 1fr;
-  }
-  .bo-cuc-5 {
     grid-template-columns: 1fr;
   }
 }
